@@ -48,6 +48,8 @@ $page->smarty->assign('import_ids', array(0,1,2));
 $page->smarty->assign('import_names', array('Disabled', 'Import - Do Not Use Filenames', 'Import - Use Filenames'));
 $page->smarty->assign('post_ids', array(0,1,2,3));
 $page->smarty->assign('post_names', array('Disabled', 'PostProcess Additional', 'PostProcess NFOs', 'All'));
+$page->smarty->assign('fix_crap_ids', array('Disabled', 'All', 'blacklist', 'executable', 'gibberish', 'hashed', 'installbin', 'passworded', 'passwordurl', 'sample', 'scr', 'short', 'size'));
+$page->smarty->assign('fix_crap_names', array('Disabled', 'All', 'blacklist', 'executable', 'gibberish', 'hashed', 'installbin', 'passworded', 'passwordurl', 'sample', 'scr', 'short', 'size'));
 
 $page->content = $page->smarty->fetch('tmux-edit.tpl');
 $page->render();
